--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,3 +1,348 @@
 /* Your styles go here */
 @import "bootstrap/scss/bootstrap.scss";
 @import "bootstrap-icons/font/bootstrap-icons.css";
+
+
+*  
+    { 
+    margin: -15; 
+    padding: 0; 
+    border: 0; 
+}
+
+html, body { overflow-x: hidden; }
+
+body {
+    background-color: none;
+    margin: 0; 
+    padding: 0; 
+    border: 0; 
+}
+// ////////////////////////////////////////////////////////////////////////////////////////////
+// footer under control
+
+#page-container {
+    position: relative;
+    min-height: 100vh;
+  }
+  
+  #content-wrap {
+    padding-bottom: 2.5rem;    /* Footer height */
+  }
+  
+  #footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;            /* Footer height */
+  }
+
+// //////////////////////////////////////////////////////////////////////////////////////////////////
+
+
+
+
+// nav section
+nav {
+    // background-color: white;
+    height: 100px;
+}
+
+
+
+.navbarbackgroundgradient{
+    background-color: dark;
+}
+
+.navcolorwhite {
+    color: blue;
+}
+
+.logosize {
+    width: 130px;
+    height: 130px;
+}
+
+
+
+.logosizefooter {
+    width: 80px;
+    height: 80px;
+    
+}
+
+.companyname {
+    width: 160px;
+    height: 40px;
+}
+
+.companynamelarge {
+    width: 780px;
+    height: 170px;
+}
+
+.floatright {
+    float: right;
+}
+
+.bgroundededges {
+    border-radius: 25px;
+  background: white;
+  padding: 20px;
+  width: 210px;
+  height: 80px;
+}
+
+.dropdowncolor {
+    background-color: white;
+}
+
+.dropdownmenu {
+    min-height: 500px;
+}
+
+.dropdownmenumarginright {
+    margin-right: 20%;
+}
+
+
+
+
+
+// jumbotron 3 start
+#video-background {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: 1;
+    width: 100%;
+}
+
+.jumbotron {
+position: relative;
+overflow: hidden;
+height: 400px;
+}
+
+.jumbotron .container {
+position: relative;
+z-index: 1;
+}
+
+// jumbotron 3 end
+
+
+// main
+.mainsectionmargins {
+    margin: 3em;
+}
+
+.colorpink{
+    color: #a0384b;
+}
+
+// .videoloop{
+//     width: 100%;
+//     height: 100%;
+//     background-color: blue;
+// }
+
+// .height-200{
+//     max-height: 200px;
+//     width: 100%;
+// }
+
+// .height-500{
+//     max-height: 470px;
+//     width: 100%;
+//     background-color: #a0384b;
+// }
+
+
+
+// .row {
+//     display: flex;
+//     flex-wrap: wrap;
+//     padding: 0 4px;
+//   }
+  
+//   /* Create two equal columns that sits next to each other */
+//   .column {
+//     flex: 50%;
+//     padding: 0 4px;
+//   }
+  
+//   .column img {
+//     margin-top: 8px;
+//     vertical-align: middle;
+//   }
+
+// .gallery2 {
+//     display: grid;
+//     grid-template-columns: repeat(8, 1fr);
+//     grid-template-rows: repeat(8, 5vw);
+//     grid-gap: 15px;
+// }
+
+
+
+
+//main
+
+
+
+
+//ABOUT PAGEmain delete
+
+
+
+
+//main delete end
+
+
+
+
+
+// delete
+// .icons-bar-section{
+// border-top: 1px solid #aaa;
+// border-bottom: 1px solid #aaa;
+// background: #492365;
+// box-shadow: inset 0px 0px 30px 10px rgba(0, 0, 0, 0.4);
+// padding: 25px 0px 25px 0px;
+// width: 100%;
+// z-index: 1;
+// }
+
+// *::before, *::after {
+//     box-sizing: inherit;
+// }
+// delete
+
+
+
+
+
+
+
+
+
+
+
+footer {
+    background-color: blue;
+    height: 240px;
+}
+
+.footer75 {
+    height: 120px;
+}
+
+.footercolumnheight {
+    height: 240px;
+}
+
+.removemarginspadding{
+    margin:0 !important;
+    padding:0 !important;
+}
+
+
+
+
+.footertext {
+    font-size: small;
+}
+
+.footertextcopy {
+    font-size: xx-small;
+}
+
+.linklogosize{
+    width: 20px;
+    height: 20px;
+}
+
+// mobile
+@media all and (max-width: 480px){
+    *{
+        padding: 0;
+        margin: 0;
+        border: 0;
+    }
+    
+    .jumbotron {
+        height: 190px;
+    }
+    // .thesearchbar {
+    //     display: none;
+    // }
+    iframe {
+        max-width: 100% !important;
+        width: auto !important;
+        height: auto !important;
+    }
+    .companynamelarge {
+        width: 330px;
+        height: 70px;
+    }
+    
+}
+
+@media all and (min-width: 481px) and (max-width: 768px){
+    *{
+        padding: 0;
+        margin: 0;
+        border: 0;
+    }
+    
+    body {
+        background-color: none;
+        background-size: cover;
+    }
+    // .thesearchbar {
+    //     display: none;
+    // }
+    .jumbotron {
+        height: 300px;
+    }
+    iframe {
+        max-width: 100% !important;
+        width: auto !important;
+        height: auto !important;
+    }
+
+    // .d-flex{
+    //     max-width: 100%;
+    // }
+
+    .companynamelarge{
+        width: 100%;
+        height: 100%;
+        background-color: none;
+    }
+}
+
+@media all and (min-width: 769px) and (max-width: 1024px){
+    // *{
+    //     padding: 0;
+    //     margin: 0;
+    //     border: 0;
+    // }
+
+    
+    body {
+        background-color: none;
+    }
+
+    .companynamelarge {
+        width: 680px;
+        height: 140px;
+    }
+    // .thesearchbar {
+    //     display: none;
+    // }
+}
